<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="80dp"
    tools:context=".ui.splash.LoginActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:id="@+id/editEmail"
        android:layout_height="wrap_content"
        android:hint="email"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:id="@+id/editPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="cpntraseña"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Iniciar"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>